static/tailwind.css
/* ... */
.line-clamp-3 {
  overflow: hidden;
  display: -webkit-box;
  -webkit-box-orient: vertical;
  -webkit-line-clamp: 3;
}

.block {
  display: block;
}

.inline-block {
  display: inline-block;
}

.flex {
  display: flex;
}

.inline-flex {
  display: inline-flex;
}

.table {
  display: table;
}

.grid {
  display: grid;
}

.\!hidden {
  display: none !important;
}

.hidden {
  display: none;
}

.aspect-\[2\/3\] {
  aspect-ratio: 2/3;
}

.aspect-square {
  aspect-ratio: 1 / 1;
}

.h-0 {
  height: 0px;
}

.h-1 {
  height: 0.25rem;
}

.h-1\.5 {
  height: 0.375rem;
}

.h-1\/3 {
  height: 33.333333%;
}

.h-1\/5 {
  height: 20%;
}

.h-10 {
  height: 2.5rem;
}

.h-11 {
  height: 2.75rem;
}

.h-12 {
  height: 3rem;
}

.h-14 {
  height: 3.5rem;
}

.h-16 {
  height: 4rem;
}

.h-2 {
  height: 0.5rem;
}

.h-2\.5 {
  height: 0.625rem;
}

.h-2\/3 {
  height: 66.666667%;
}

.h-20 {
  height: 5rem;
}

.h-24 {
  height: 6rem;
}

.h-28 {
  height: 7rem;
}

.h-3 {
  height: 0.75rem;
}

.h-3\.5 {
  height: 0.875rem;
}

.h-32 {
  height: 8rem;
}

.h-36 {
  height: 9rem;
}

.h-4 {
  height: 1rem;
}

.h-40 {
  height: 10rem;
}

.h-44 {
  height: 11rem;
}

.h-5 {
  height: 1.25rem;
}

.h-6 {
  height: 1.5rem;
}

.h-64 {
  height: 16rem;
}

.h-7 {
  height: 1.75rem;
}

.h-72 {
  height: 18rem;
}

.h-8 {
  height: 2rem;
}

.h-9 {
  height: 2.25rem;
}

.h-\[300px\] {
  height: 300px;
}

.h-\[320px\] {
  height: 320px;
}

.h-\[360px\] {
  height: 360px;
}

.h-\[400px\] {
  height: 400px;
}

.h-\[420px\] {
  height: 420px;
}

.h-\[480px\] {
  height: 480px;
}

.h-\[520px\] {
  height: 520px;
}

.h-fit {
  height: -moz-fit-content;
  height: fit-content;
}

.h-full {
  height: 100%;
}

.h-px {
  height: 1px;
}

.h-screen {
  height: 100vh;
}

.max-h-48 {
  max-height: 12rem;
}

.max-h-52 {
  max-height: 13rem;
}

.max-h-56 {
  max-height: 14rem;
}

.max-h-60 {
  max-height: 15rem;
}

.max-h-64 {
  max-height: 16rem;
}

.max-h-\[1240px\] {
  max-height: 1240px;
}

.max-h-\[420px\] {
  max-height: 420px;
}

.max-h-\[620px\] {
  max-height: 620px;
}

.max-h-\[640px\] {
  max-height: 640px;
}

.max-h-\[700px\] {
  max-height: 700px;
}

.max-h-\[80vh\] {
  max-height: 80vh;
}

.max-h-\[86vh\] {
  max-height: 86vh;
}

.max-h-\[90vh\] {
  max-height: 90vh;
}

.max-h-\[92vh\] {
  max-height: 92vh;
}

.min-h-0 {
  min-height: 0px;
}

.min-h-\[112px\] {
  min-height: 112px;
}

.min-h-\[140px\] {
  min-height: 140px;
}

.min-h-\[180px\] {
  min-height: 180px;
}

.min-h-\[240px\] {
  min-height: 240px;
}

.min-h-\[2rem\] {
  min-height: 2rem;
}

.min-h-\[50vh\] {
  min-height: 50vh;
}

.min-h-\[60vh\] {
  min-height: 60vh;
}

.min-h-\[min\(680px\2c calc\(100vh-3rem\)\)\] {
  min-height: min(680px, calc(100vh - 3rem));
}

.min-h-\[min\(720px\2c calc\(100vh-3rem\)\)\] {
  min-height: min(720px, calc(100vh - 3rem));
}

.min-h-screen {
  min-height: 100vh;
}

.w-1 {
  width: 0.25rem;
}

.w-1\.5 {
  width: 0.375rem;
}

.w-1\/2 {
  width: 50%;
}

.w-1\/3 {
  width: 33.333333%;
}

.w-10 {
  width: 2.5rem;
}

.w-11 {
  width: 2.75rem;
}

.w-12 {
  width: 3rem;
}

.w-14 {
  width: 3.5rem;
}

.w-16 {
  width: 4rem;
}

.w-2 {
  width: 0.5rem;
}

.w-2\.5 {
  width: 0.625rem;
}

.w-2\/3 {
  width: 66.666667%;
}

.w-20 {
  width: 5rem;
}

.w-24 {
  width: 6rem;
}

.w-28 {
  width: 7rem;
}

.w-3 {
  width: 0.75rem;
}

.w-3\.5 {
  width: 0.875rem;
}

.w-3\/4 {
  width: 75%;
}

.w-3\/5 {
  width: 60%;
}

.w-32 {
  width: 8rem;
}

.w-36 {
  width: 9rem;
}

.w-4 {
  width: 1rem;
}

.w-4\/5 {
  width: 80%;
}

.w-40 {
  width: 10rem;
}

.w-48 {
  width: 12rem;
}

.w-5 {
  width: 1.25rem;
}

.w-56 {
  width: 14rem;
}

.w-6 {
  width: 1.5rem;
}

.w-7 {
  width: 1.75rem;
}

.w-72 {
  width: 18rem;
}

.w-8 {
  width: 2rem;
}

.w-9 {
  width: 2.25rem;
}

.w-96 {
  width: 24rem;
}

.w-\[120px\] {
  width: 120px;
}

.w-\[320px\] {
  width: 320px;
}

.w-\[360px\] {
  width: 360px;
}

.w-\[400px\] {
  width: 400px;
}

.w-\[420px\] {
  width: 420px;
}

.w-\[480px\] {
  width: 480px;
}

.w-\[5\.75rem\] {
  width: 5.75rem;
}

.w-\[520px\] {
  width: 520px;
}

.w-\[90\%\] {
  width: 90%;
}

.w-\[calc\(100vw-1\.5rem\)\] {
  width: calc(100vw - 1.5rem);
}

.w-\[min\(18rem\2c calc\(100vw-2rem\)\)\] {
  width: min(18rem, calc(100vw - 2rem));
}

.w-\[min\(420px\2c 80vw\)\] {
  width: min(420px, 80vw);
}

.w-fit {
  width: -moz-fit-content;
  width: fit-content;
}

.w-full {
  width: 100%;
}

.min-w-0 {
  min-width: 0px;
}

.min-w-\[100px\] {
  min-width: 100px;
}

.min-w-\[110px\] {
  min-width: 110px;
}

.min-w-\[130px\] {
  min-width: 130px;
}

.min-w-\[160px\] {
  min-width: 160px;
}

.min-w-\[250px\] {
  min-width: 250px;
}

.min-w-\[600px\] {
  min-width: 600px;
}

.min-w-max {
  min-width: -moz-max-content;
  min-width: max-content;
}

.max-w-2xl {
  max-width: 42rem;
}

.max-w-4xl {
  max-width: 56rem;
}

.max-w-5xl {
  max-width: 64rem;
}

.max-w-6xl {
  max-width: 72rem;
}

.max-w-\[1080px\] {
  max-width: 1080px;
}

.max-w-\[120px\] {
  max-width: 120px;
}

.max-w-\[130px\] {
  max-width: 130px;
}

.max-w-\[150px\] {
  max-width: 150px;
}

.max-w-\[200px\] {
  max-width: 200px;
}

.max-w-\[250px\] {
  max-width: 250px;
}

.max-w-\[280px\] {
  max-width: 280px;
}

.max-w-\[80px\] {
  max-width: 80px;
}

.max-w-full {
  max-width: 100%;
}

.max-w-lg {
  max-width: 32rem;
}

.max-w-md {
  max-width: 28rem;
}

.max-w-sm {
  max-width: 24rem;
}

.max-w-xl {
  max-width: 36rem;
}

.flex-1 {
  flex: 1 1 0%;
}

.flex-shrink-0 {
  flex-shrink: 0;
}

.shrink-0 {
  flex-shrink: 0;
}

.flex-grow {
  flex-grow: 1;
}

.border-collapse {
  border-collapse: collapse;
}

.-translate-x-1\/2 {
  --tw-translate-x: -50%;
  transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
}
/* ... */

